--- a/testDrawSketch/Base.lproj/MainMenu.xib
+++ b/testDrawSketch/Base.lproj/MainMenu.xib
@@ -1030,7 +1030,7 @@
                     <slider verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="rc1-3V-pfd">
                         <rect key="frame" x="549" y="218" width="96" height="19"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                        <sliderCell key="cell" state="on" alignment="left" minValue="0.25" maxValue="4" doubleValue="1" tickMarkPosition="above" sliderType="linear" id="YsX-hr-BsD"/>
+                        <sliderCell key="cell" continuous="YES" state="on" alignment="left" minValue="0.25" maxValue="4" doubleValue="1" tickMarkPosition="above" sliderType="linear" id="YsX-hr-BsD"/>
                         <connections>
                             <action selector="modifycontrast:" target="Voe-Tx-rLC" id="DWW-Wl-iff"/>
                         </connections>
@@ -1038,7 +1038,7 @@
                     <slider verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="TdE-LR-pHq">
                         <rect key="frame" x="549" y="184" width="96" height="19"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                        <sliderCell key="cell" state="on" alignment="left" maxValue="2" doubleValue="1" tickMarkPosition="above" sliderType="linear" id="Qv0-SJ-ATh"/>
+                        <sliderCell key="cell" continuous="YES" state="on" alignment="left" maxValue="2" doubleValue="1" tickMarkPosition="above" sliderType="linear" id="Qv0-SJ-ATh"/>
                         <connections>
                             <action selector="modifysaturation:" target="Voe-Tx-rLC" id="G2n-mK-Ymx"/>
                         </connections>
@@ -1046,7 +1046,7 @@
                     <slider verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Bqg-AE-Ha8">
                         <rect key="frame" x="549" y="152" width="96" height="19"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                        <sliderCell key="cell" state="on" alignment="left" minValue="-1" maxValue="1" tickMarkPosition="above" sliderType="linear" id="SD1-bc-P3d"/>
+                        <sliderCell key="cell" continuous="YES" state="on" alignment="left" minValue="-1" maxValue="1" tickMarkPosition="above" sliderType="linear" id="SD1-bc-P3d"/>
                         <connections>
                             <action selector="modifybrightness:" target="Voe-Tx-rLC" id="diQ-FL-Vbk"/>
                         </connections>
